--- a/package.json
+++ b/package.json
@@ -14,10 +14,18 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
-    "eslint": "^6.1.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "nodemon": "^1.19.1",
     "pg": "^7.12.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
