Add post request for account

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "zumo",
-    "password": null,
+    "password": "password",
     "database": "aptool",
     "host": "127.0.0.1",
     "dialect": "postgres",
