--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-import": "^2.18.2",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "express-jwt": "^5.3.1",
     "jsonapi-serializer": "^3.6.4",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^1.19.1",
