--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-jwt": "^5.3.1",
     "jsonapi-serializer": "^3.6.4",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.3.0",
     "nodemon": "^1.19.1",
     "pg": "^7.12.1",
     "sequelize": "^5.15.0"
