--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nodemailer": "^6.3.0",
     "nodemon": "^1.19.1",
     "pg": "^7.12.1",
-    "sequelize": "^5.15.0"
+    "sequelize": "^5.15.0",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
