Fix production db problem

--- a/config/config.json
+++ b/config/config.json
@@ -18,9 +18,9 @@
   "production": {
     "username": "root",
     "password": null,
-    "database": "database_production",
+    "database": "aptool",
     "host": "127.0.0.1",
-    "dialect": "mysql",
+    "dialect": "postgres",
     "operatorsAliases": false
   }
 }
