--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,16 @@
 version: 2
 jobs:
+  checkout_code: 
+    docker:
+      - image: circleci/node:10
+    working_directory: ~/GIT/zumo/webapps/aptool/aptool
+    steps:
+      - checkout
+      - persist_to_workspace:
+          root: .
+          paths: 
+            - .
+
   build:
     docker:
       - image: circleci/node:10
@@ -23,16 +34,16 @@ workflows:
   version: 2
   build:
     jobs:
-      - checkout
+      - checkout_code
       - build:
           requires:
-            - checkout
+            - checkout_code
   deploy_to_development:
     jobs:
-      - checkout
+      - checkout_code
       - build:
           requires: 
-            - checkout
+            - checkout_code
       - deploy_to_development:
           requires:
             - build
