--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
     steps: 
       - run:
           name: Push to Heroku 
-          command: git push https://heroku:f223ac06-9231-41d2-8c01-789ed0e1b846@git.heroku.com/api-aptool.git master
+          command: git push https://heroku:f223ac06-9231-41d2-8c01-789ed0e1b846@git.heroku.com/api-aptool.git dev
     
 workflows:
   version: 2
