--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,5 +39,5 @@ workflows:
           filters:
             branches:
               only:
-                 - dev
+                 - master
         
