--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2
+orbs:
+  heroku: circleci/heroku@1.0.0
 jobs:
   checkout_code: 
     docker:
@@ -23,16 +25,15 @@ jobs:
       
   deploy:
     docker:
-      - image: google/cloud-sdk
+      - image: buildpack-deps:trusty
     working_directory: ~/GIT/zumo/webapps/aptool/aptool
     steps: 
       - run:
           name: Production Deployment 
           command: |
-              echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
-              gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-              gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
-    
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+
+
 workflows:
   version: 2
   build:
