use google app engine

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,15 +25,17 @@ jobs:
       
   deploy:
     docker:
-      - image: buildpack-deps:trusty
+      - image: google/cloud-sdk
     working_directory: ~/GIT/zumo/webapps/aptool/aptool
     steps:
       - attach_workspace:
           at: .
       - run:
           name: Production Deployment 
-          command: |
-            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+          command:  |
+            echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
+            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
 
 
 workflows:
