--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
       - attach_workspace:
           at: .
       - run:
-          name: Production Deployment 
+          name: Deploy to production 
           command:  |
             echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account $G_SERVICE_ACCOUNT --key-file=-
             gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
