--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google/maps": "^0.5.5",
     "@sentry/node": "^5.6.2",
+    "axios": "^0.19.0",
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -27,6 +28,7 @@
     "nodemailer": "^6.3.0",
     "nodemon": "^1.19.1",
     "pg": "^7.12.1",
+    "request": "^2.88.0",
     "sequelize": "^5.15.0",
     "validator": "^11.1.0"
   },
